TP_bcmk.log
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
  File "/home/hanshis/workspace/LongContextInfer/test/TP_baseline.py", line 73
    with open(args.file, 'a') as f:
    ^
IndentationError: expected an indented block
[2024-03-22 20:20:59,064] torch.distributed.elastic.multiprocessing.api: [ERROR] failed (exitcode: 1) local_rank: 0 (pid: 65281) of binary: /home/hanshis/anaconda3/envs/torch/bin/python
Traceback (most recent call last):
  File "/home/hanshis/anaconda3/envs/torch/bin/torchrun", line 8, in <module>
    sys.exit(main())
  File "/home/hanshis/anaconda3/envs/torch/lib/python3.9/site-packages/torch/distributed/elastic/multiprocessing/errors/__init__.py", line 347, in wrapper
    return f(*args, **kwargs)
  File "/home/hanshis/anaconda3/envs/torch/lib/python3.9/site-packages/torch/distributed/run.py", line 812, in main
    run(args)
  File "/home/hanshis/anaconda3/envs/torch/lib/python3.9/site-packages/torch/distributed/run.py", line 803, in run
    elastic_launch(
  File "/home/hanshis/anaconda3/envs/torch/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 135, in __call__
    return launch_agent(self._config, self._entrypoint, list(args))
  File "/home/hanshis/anaconda3/envs/torch/lib/python3.9/site-packages/torch/distributed/launcher/api.py", line 268, in launch_agent
    raise ChildFailedError(
torch.distributed.elastic.multiprocessing.errors.ChildFailedError: 
============================================================
test/TP_baseline.py FAILED
------------------------------------------------------------
Failures:
[1]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 1 (local_rank: 1)
  exitcode  : 1 (pid: 65282)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[2]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 2 (local_rank: 2)
  exitcode  : 1 (pid: 65283)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[3]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 3 (local_rank: 3)
  exitcode  : 1 (pid: 65284)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[4]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 4 (local_rank: 4)
  exitcode  : 1 (pid: 65285)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[5]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 5 (local_rank: 5)
  exitcode  : 1 (pid: 65286)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[6]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 6 (local_rank: 6)
  exitcode  : 1 (pid: 65287)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
[7]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 7 (local_rank: 7)
  exitcode  : 1 (pid: 65289)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
------------------------------------------------------------
Root Cause (first observed failure):
[0]:
  time      : 2024-03-22_20:20:59
  host      : lovelace.ece.local.cmu.edu
  rank      : 0 (local_rank: 0)
  exitcode  : 1 (pid: 65281)
  error_file: <N/A>
  traceback : To enable traceback see: https://pytorch.org/docs/stable/elastic/errors.html
============================================================
